# mouse

./: .gitignore  .gitmodules  README.md
.github/workflows/: pcb.yml
firmware-c/: .clangd  .gitignore  .gitmodules  README.md  cross.ini  meson.build  mouse.ld
firmware-c/crossfiles/: main.ini
firmware-c/crossfiles/stm32/: f0.ini
firmware-c/drivers/: button.c  button.h  encoder.c  encoder.h  meson.build
firmware-c/drivers/sensors/: pmw3360.c  pmw3360.h  pmw3360_fw_liftoff.h  pmw3360_fw_tracking.h
firmware-c/drivers/stm32/f0/: meson.build
firmware-c/hal/: delay.h  gpio.h  spi.h  usb.h
firmware-c/hal/stm32/f0/: delay.c  f0.ld  gpio.c  meson.build  spi.c  spi_presets.h  usb.c
firmware-c/hal/stm32/f0/include/: pins.h
firmware-c/inc/: delay.h  firmware_tracking.h  pmw3360.h
firmware-c/include/: PMW3360.h  delay.h  firmware_liftoff.h  pmw3360.h
firmware-c/src/: PMW3360.c  delay.c  main.c  pmw3360.c
firmware-rust/: .gitignore  Cargo.toml  README.md  memory.x
firmware-rust/.cargo/: config.toml
firmware-rust/mouse-fw/: Cargo.toml  README.md  build.rs  openocd.cfg
firmware-rust/mouse-fw/src/: main.rs
firmware-rust/mouse-libs/: Cargo.toml  README.md
firmware-rust/mouse-libs/src/: debouncer.rs  lib.rs
firmware-rust/mouse-libs/src/pmw3360/: mod.rs  registers.rs  srom_liftoff.rs  srom_tracking.rs
firmware-rust/src/: main.rs  mcu_abstraction.rs
firmware-rust/src/drivers/: debouncer.rs  debouncer_test.rs  encoder.rs  mod.rs
firmware-rust/src/drivers/pmw3360/: mod.rs
housing/: README.md  TODO.md
housing/stl/: bottom.stl  button.stl  left.stl  middle.stl  right.stl
pcb/: .gitignore  README.md  TODO.md  buttons.kicad_sch  fp-lib-table  mcu.kicad_sch  mouse-cache.lib  mouse.kicad_pcb  mouse.kicad_pro  mouse.kicad_sch  mouse.kicad_sym  mouse.lib  mouse.net  mouse.pro  mouse.sch  mouse.sch-bak  sensor.kicad_sch  sym-lib-table  usb.kicad_sch
pcb/.github/workflows/: work.yml
pcb/3d/: encoder_ec10_9mm.step  encoder_ec10_9mm.wrl  sensor_pmw3360dm.step  sensor_pmw3360dm.wrl  switch_d2fc-f-7n.step  switch_d2fc-f-7n.wrl  usb_c_u262-16xn-4bvc11.step  usb_c_u262-16xn-4bvc11.wrl
pcb/ci/: config.kibot.yml
pcb/fabrication/: bom.csv  pp.csv
pcb/mouse.pretty/: mouse_encoder.kicad_mod  mouse_switch.kicad_mod  pmw3360-t2qu.kicad_mod
