[package]
authors = ["Andrej Kenda"]
edition = "2018"
readme = "README.md"
name = "mouse-fw-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
stm32f0xx-hal = { version = "0.18", features = ["stm32f042", "stm32-usbd", "rt"]}
panic-halt = "0.2.0"
usb-device = "0.2.4"
usbd-hid = "0.6.1"
mouse-libs = { path = "../mouse-libs" }

# this lets you use `cargo fix`!
[[bin]]
name = "mouse-fw-rust"
test = false
bench = false

[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = "z"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"

[features]
disable_usb = []
